<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    >

    <TextView
        android:id="@+id/prod_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/prod_type"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/vertical_guide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/num_picker"
        />

    <NumberPicker
        android:id="@+id/num_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/vertical_guide"
        app:layout_constraintHorizontal_bias="0.2"
        />

    <TextView
        android:id="@+id/qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/qty"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/num_picker"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/vertical_guide"
        />

    <Button
        android:id="@+id/manager_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/vertical_guide"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/total"
        />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/total"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/vertical_guide"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide"
        />

    <Button
        android:id="@+id/buy_btn"
        android:layout_width="wrap_content"
        android:layout_height="0sp"
        android:text="@string/buy_btn"
        app:layout_constraintDimensionRatio="w, 1"
        app:layout_constraintTop_toBottomOf="@id/num_picker"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/vertical_guide"
        />

    <ListView
        android:id="@+id/prod_list"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"
        />


</androidx.constraintlayout.widget.ConstraintLayout>